--- a/latte/theme/stylesheet.css
+++ b/latte/theme/stylesheet.css
@@ -4888,22 +4888,21 @@ dl.details dd {
 
 .jumpbox-cat-link {
   background-color: #654c22;
-  border-top-color: #0076B1;
   color: #fefbf5; }
 
 .jumpbox-cat-link:hover {
-  background-color: #12A3EB;
-  border-top-color: #12A3EB;
+  background-color: #978464;
+  border-top-color: #978464;
   color: #fefbf5; }
 
 .jumpbox-forum-link {
-  background-color: #E1EBF2; }
+  background-color: #f0ece0; }
 
 .jumpbox-forum-link:hover {
-  background-color: #F6F4D0; }
+  background-color: #dbd5c9; }
 
 .jumpbox .dropdown .pointer-inner {
-  border-color: #E1EBF2 transparent; }
+  border-color: #f0ece0 transparent; }
 
 .jumpbox-sub-link {
   background-color: #f0ece0; }
